feat: 添加新依赖

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "ext-json": "*",
         "pimple/pimple": "^3.4",
         "league/event": "^3.0",
-        "blast/facades": "^1.0"
+        "blast/facades": "^1.0",
+        "ext-zlib": "*",
+        "ext-fileinfo": "*",
+        "shieldon/psr-http": "^1.2"
     },
     "require-dev": {
         "paulxu-cn/event-ide-helper": "^0.1.0"
